Fix bullet points to wrap properly.

--- a/static/css/resume-styles.scss
+++ b/static/css/resume-styles.scss
@@ -90,15 +90,27 @@ a {
   }
 
   .company-list > li {
-    margin: 15px 0px 5px;
+
   }
 
   .company-description {
+      margin-left: .6em;
   }
 
-  .company-description > li {
-    list-style: circle inside;
+  .company-description  li {
+    list-style-type: none;
+    position:relative;
   }
+
+  .company-description li:before {
+        content: "\2219";
+        font-size:2.5em;    /* the default unicode bullet size is very small */
+        line-height:0;        /* kills huge line height on resized bullet */
+        position:absolute;  /* position bullet relative to list item */
+        top:.23em;           /* vertical align bullet position relative to list item */
+        left:-.5em;
+  }
+
 }
 
 #education {
@@ -277,7 +289,7 @@ h2 {
 
   html {
     line-height: 1em;
-    font-size: 0.75em;
+    font-size: 0.7em;
   }
 
   h4 {
